<resources>
    <string name="app_name">learnSpire</string>
    <string name="title_courses">Courses</string>
    <string name="title_content">Content</string>
    <string name="title_browse">Browse</string>
    <string name="title_marks">Marks</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Login</string>

    <string name="course_name">Course Name</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">learnSpire</string>
    <string name="title_activity_content">Content</string>

    <string name="signin_fragment_label">Signin</string>
    <string name="signup_fragment_label">Signup</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_notifications">Notifications</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_content">Notification Content</string>
    <string name="title_notification_content">Announcement</string>
    <string name="title_activity_lecturer_menu">LecturerMenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_add_courses">Add Course</string>
    <string name="title_add_content">Add Content</string>
    <string name="title_add_marks">Student Marks</string>
    <string name="title_add_announcements">Add Announcement</string>
    <string name="title_add">Add</string>
    <string name="student_name">Student Name</string>
    <string name="marks">Marks</string>
</resources>