<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/title_courses" />

    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_browse" />

    <item
        android:id="@+id/navigation_marks"
        android:icon="@drawable/ic_grade_black_24dp"
        android:title="@string/title_marks" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_notifications" />


</menu>