<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/title_courses" />
   <item
        android:id="@+id/navigation_add_course"
        android:icon="@drawable/ic_baseline_bookmark_add_24"
        android:title="@string/title_add_courses" />
   <item
        android:id="@+id/navigation_add_content"
        android:icon="@drawable/ic_baseline_content_paste_24"
        android:title="@string/title_add_content" />
   <item
        android:id="@+id/navigation_add_marks"
        android:icon="@drawable/ic_grade_black_24dp"
        android:title="@string/title_add_marks" />
   <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />


</menu>