<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_navigation"
    app:startDestination="@+id/navigation_courses">

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.learnSpire.mobile.fragments.menu.CoursesFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses" >
        <action
            android:id="@+id/action_CoursesFragment_to_CourseContentFragment"
            app:destination="@id/course_content" />
    </fragment>

    <fragment
        android:id="@+id/course_content"
        android:name="com.learnSpire.mobile.fragments.menu.CourseContentFragment"
        android:label="@string/title_content"
        tools:layout="@layout/fragment_course_content" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.learnSpire.mobile.fragments.menu.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_marks"
        android:name="com.learnSpire.mobile.fragments.menu.MarksFragment"
        android:label="@string/title_marks"
        tools:layout="@layout/fragment_marks" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.learnSpire.mobile.fragments.menu.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
    <action
        android:id="@+id/action_ProfileFragment_to_LoginActivity"
        app:destination="@id/LoginActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.learnSpire.mobile.fragments.menu.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <activity
        android:id="@+id/LoginActivity"
        android:name="com.learnSpire.mobile.activities.LoginActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_login">
    </activity>

</navigation>