<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lecturer_menu_navigation"
    app:startDestination="@+id/navigation_courses">

    <fragment
        android:id="@+id/navigation_courses"
        android:name="com.learnSpire.mobile.fragments.menu.CoursesFragment"
        android:label="@string/title_courses"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/navigation_add_section"
        android:name="com.learnSpire.mobile.fragments.menu.AddSectionFragment"
        android:label="@string/title_add_courses"
        tools:layout="@layout/fragment_add_course" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.learnSpire.mobile.fragments.menu.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_ProfileFragment_to_LoginActivity"
            app:destination="@id/LoginActivity" />
    </fragment>

    <activity
        android:id="@+id/LoginActivity"
        android:name="com.learnSpire.mobile.activities.LoginActivity"
        android:label="@string/app_name"
        tools:layout="@layout/activity_login">
    </activity>

</navigation>